[gd_scene load_steps=17 format=2]

[ext_resource path="res://Map/Camera/Camera.gd" type="Script" id=1]
[ext_resource path="res://Map/MouseCollision.gd" type="Script" id=2]
[ext_resource path="res://Map/InterfaceManager.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 523.5, 55 )

[sub_resource type="CircleShape2D" id=4]
radius = 13.0384

[sub_resource type="NavigationMesh" id=5]
vertices = PoolVector3Array( -92.75, 0.170498, -99.5, -99.5, 0.170498, -99.5, -99.5, 0.170498, -87.5, -85.75, 0.170498, -99.5, -92.75, 0.170498, -99.5, -99.5, 0.170498, -87.5, -85.75, 0.170498, -99.5, -99.5, 0.170498, -87.5, -99.5, 0.170498, -81.5, -79, 0.170498, -99.5, -99.5, 0.170498, -39, -99.5, 0.170498, -33, -44.5, 0.170498, -4, -79, 0.170498, -99.5, -99.5, 0.170498, -81.5, -99.5, 0.170498, -75.25, -72, 0.170498, -99.5, -44.5, 0.170498, -99.5, -99.5, 0.170498, -57.25, -99.5, 0.170498, -51, -44.5, 0.170498, -4, -65.25, 0.170498, -99.5, -72, 0.170498, -99.5, -99.5, 0.170498, -75.25, -58.25, 0.170498, -99.5, -65.25, 0.170498, -99.5, -99.5, 0.170498, -75.25, -99.5, 0.170498, -2.25, -46, 0.170498, -2.25, -46, 0.170498, -3.25, -99.5, 0.170498, -8.5, -99.5, 0.170498, -2.25, -46, 0.170498, -3.25, -45.25, 0.170498, -4, -51.5, 0.170498, -99.5, -58.25, 0.170498, -99.5, -99.5, 0.170498, -75.25, -44.5, 0.170498, -99.5, -99.5, 0.170498, -63.25, -99.5, 0.170498, -57.25, -99.5, 0.170498, -8.5, -45.25, 0.170498, -4, -44.5, 0.170498, -4, -99.5, 0.170498, -14.5, -99.5, 0.170498, -51, -99.5, 0.170498, -39, -44.5, 0.170498, -4, -99.5, 0.170498, -20.75, -99.5, 0.170498, -14.5, -44.5, 0.170498, -4, -99.5, 0.170498, -26.75, -99.5, 0.170498, -20.75, -44.5, 0.170498, -4, -44.5, 0.170498, -99.5, -51.5, 0.170498, -99.5, -99.5, 0.170498, -75.25, -99.5, 0.170498, -63.25, -99.5, 0.170498, -33, -99.5, 0.170498, -26.75, -44.5, 0.170498, -4, 8.75, 0.170498, -39.75, 8.75, 0.170498, -99.5, 2, 0.170498, -99.5, 7.25, 0.170498, -39, 8.75, 0.170498, -39.75, 2, 0.170498, -99.5, -4.75, 0.170498, -99.5, -44.5, 0.170498, -4, -43.5, 0.170498, -3.75, 7.25, 0.170498, -37.5, 7.25, 0.170498, -39, -38, 0.170498, -99.5, -44.5, 0.170498, -99.5, 7.25, 0.170498, -39, -24.75, 0.170498, -99.5, -31.25, 0.170498, -99.5, 7.25, 0.170498, -39, -31.25, 0.170498, -99.5, -38, 0.170498, -99.5, 7.25, 0.170498, -39, -4.75, 0.170498, -99.5, -11.5, 0.170498, -99.5, 7.25, 0.170498, -39, -11.5, 0.170498, -99.5, -18, 0.170498, -99.5, 7.25, 0.170498, -39, -18, 0.170498, -99.5, -24.75, 0.170498, -99.5, 99.5, 0.170498, -92, 99.5, 0.170498, -99.5, 88, 0.170498, -99.5, 99.5, 0.170498, -84.25, 99.5, 0.170498, -92, 88, 0.170498, -99.5, 99.5, 0.170498, -76.5, 99.5, 0.170498, -84.25, 88, 0.170498, -99.5, 99.5, 0.170498, -76.5, 88, 0.170498, -99.5, 76.75, 0.170498, -99.5, 99.5, 0.170498, -68.75, 54, 0.170498, -99.5, 42.5, 0.170498, -99.5, 10.5, 0.170498, -38, 99.5, 0.170498, -61.25, 99.5, 0.170498, -68.75, 76.75, 0.170498, -99.5, 99.5, 0.170498, -53.5, 99.5, 0.170498, -61.25, 76.75, 0.170498, -99.5, 99.5, 0.170498, -53.5, 76.75, 0.170498, -99.5, 65.25, 0.170498, -99.5, 99.5, 0.170498, -45.75, 8.75, 0.170498, -99.5, 8.75, 0.170498, -39.75, 10, 0.170498, -39.5, 20, 0.170498, -99.5, 99.5, 0.170498, -38, 99.5, 0.170498, -45.75, 65.25, 0.170498, -99.5, 54, 0.170498, -99.5, 10.5, 0.170498, -38, 20, 0.170498, -99.5, 10, 0.170498, -39.5, 10.5, 0.170498, -38, 31.25, 0.170498, -99.5, 42.5, 0.170498, -99.5, 31.25, 0.170498, -99.5, 10.5, 0.170498, -38, 12.75, 25.1705, -34.5, 11.5, 24.4205, -33.5, 13.5, 24.4205, -33.5, 12.75, 26.1705, -35.5, 12.75, 25.1705, -34.5, 13.5, 24.4205, -33.5, 13.75, 27.1705, -37.75, 11.5, 26.9205, -43.5, 8.75, 27.1705, -42.5, 8, 27.1705, -40.5, 10, 26.6705, -35.25, 13.75, 27.1705, -37.75, 14.75, 27.1705, -40.75, 13.6667, 27.4205, -41.6667, 9, 27.6705, -37.875, 9.5, 27.4205, -36.5625, 11.875, 27.1705, -36.5, 14.0833, 27.4205, -38.75, 9.48003, 27.9205, -39.992, 12.495, 27.9205, -41.503, 10.9851, 27.9205, -38.5091, 11.5, 26.9205, -43.5, 10.25, 26.9205, -43.5, 8.75, 27.1705, -42.5, 13.75, 27.1705, -37.75, 14.75, 27.1705, -39, 14.75, 27.1705, -40.75, 14.0833, 27.4205, -38.75, 11, 26.9205, -35.75, 12.75, 26.1705, -35.5, 13.75, 27.1705, -37.75, 11.875, 26.6705, -35.625, 14.75, 27.1705, -40.75, 13.25, 27.1705, -42.5, 11.5, 26.9205, -43.5, 13.6667, 27.4205, -41.6667, 10, 26.6705, -35.25, 11, 26.9205, -35.75, 13.75, 27.1705, -37.75, 11.875, 27.1705, -36.5, 3.75, 23.4205, -40.75, 4, 23.6705, -39.5, 4, 23.6705, -40.25, 3.75, 23.4205, -40.75, 4, 23.6705, -40.25, 5, 24.4205, -40.5, 5, 24.1705, -41.25, 5, 24.1705, -41.25, 5.75, 24.1705, -42, 5.5, 23.6705, -42.75, 3.75, 23.4205, -40.75, 9.75, 24.6705, -40.5, 9.75, 24.6705, -39.5, 10.5, 24.4205, -39, 12.5, 23.4205, -41, 10.5, 23.6705, -42.75, 10.5, 24.4205, -37.5, 12, 23.6705, -35.75, 12.75, 23.1705, -36, 12.5, 23.4205, -41, 10.5, 24.4205, -39, 4.5, 24.4205, -36, 4, 23.9205, -35.5, 4.5, 24.4205, -35.5, 6.75, 24.1705, -33, 8, 24.1705, -33, 8, 25.4205, -34.25, 5.5, 23.9205, -33.25, 5, 24.9205, -38.25, 4.25, 24.4205, -38.25, 4.5, 24.4205, -36, 4.5, 24.4205, -35.5, 4.5, 23.9205, -34.5, 5.5, 23.9205, -33.25, 4.5, 24.4205, -35.5, 5.5, 23.9205, -33.25, 8, 25.4205, -34.25, 10, 26.6705, -35.25, 8, 27.1705, -40.5, 5, 24.9205, -38.25, 9.5, 27.4205, -36.5625, 9, 27.6705, -37.875, 5, 24.9205, -38.25, 4.5, 24.4205, -36, 4.5, 24.4205, -35.5, 8.5, 0.170498, -38.25, 8.75, 0.170498, -37.75, 9.25, 0.170498, -38, 90.5, 0.170498, 99.5, 99.5, 0.170498, 99.5, 99.5, 0.170498, 90.75, 90.5, 0.170498, 99.5, 99.5, 0.170498, 90.75, 99.5, 0.170498, 82.25, 81.5, 0.170498, 99.5, -43.5, 0.170498, -0.75, -8.5, 0.170498, 99.5, 0.5, 0.170498, 99.5, 81.5, 0.170498, 99.5, 99.5, 0.170498, 82.25, 99.5, 0.170498, 73.5, 72.5, 0.170498, 99.5, -43.5, 0.170498, -0.75, -44.25, 0.170498, -0.75, -44.25, 0.170498, 99.5, -35.5, 0.170498, 99.5, 72.5, 0.170498, 99.5, 99.5, 0.170498, 73.5, 99.5, 0.170498, 65, 63.5, 0.170498, 99.5, -43.5, 0.170498, -0.75, 0.5, 0.170498, 99.5, 9.5, 0.170498, 99.5, 63.5, 0.170498, 99.5, 99.5, 0.170498, 65, 99.5, 0.170498, 56.25, 54.5, 0.170498, 99.5, 8.25, 0.170498, -36.5, -43, 0.170498, -3.25, -42.75, 0.170498, -1.5, -43.5, 0.170498, -0.75, -35.5, 0.170498, 99.5, -26.5, 0.170498, 99.5, 8.25, 0.170498, -36.5, -42.75, 0.170498, -1.5, -43.5, 0.170498, -0.75, 9.75, 0.170498, -36.5, 99.5, 0.170498, 13.5, 99.5, 0.170498, 4.75, 9.75, 0.170498, -36.5, 54.5, 0.170498, 99.5, 99.5, 0.170498, 56.25, 99.5, 0.170498, 47.75, 45.5, 0.170498, 99.5, -43.5, 0.170498, -0.75, -26.5, 0.170498, 99.5, -17.5, 0.170498, 99.5, 45.5, 0.170498, 99.5, 99.5, 0.170498, 47.75, 99.5, 0.170498, 39.25, 36.5, 0.170498, 99.5, 27.5, 0.170498, 99.5, 99.5, 0.170498, 30.75, 99.5, 0.170498, 22, 18.5, 0.170498, 99.5, 99.5, 0.170498, -38, 10.5, 0.170498, -38, 10.5, 0.170498, -37.25, 99.5, 0.170498, -29.5, -43.5, 0.170498, -0.75, -17.5, 0.170498, 99.5, -8.5, 0.170498, 99.5, 99.5, 0.170498, -29.5, 10.5, 0.170498, -37.25, 9.75, 0.170498, -36.5, 99.5, 0.170498, -21, 99.5, 0.170498, 22, 99.5, 0.170498, 13.5, 9.75, 0.170498, -36.5, -43.5, 0.170498, -0.75, 9.5, 0.170498, 99.5, 18.5, 0.170498, 99.5, 99.5, 0.170498, -12.5, 99.5, 0.170498, -21, 9.75, 0.170498, -36.5, 36.5, 0.170498, 99.5, 99.5, 0.170498, 39.25, 99.5, 0.170498, 30.75, 27.5, 0.170498, 99.5, 99.5, 0.170498, -3.75, 99.5, 0.170498, -12.5, 9.75, 0.170498, -36.5, 99.5, 0.170498, 4.75, 99.5, 0.170498, -3.75, 9.75, 0.170498, -36.5, -43, 0.170498, -3.25, 8.25, 0.170498, -36.5, 7.25, 0.170498, -37.5, -43.5, 0.170498, -3.75, -40.75, 25.1705, 1.25, -41.75, 24.4205, 2.25, -40.25, 24.4205, 2.25, -40.75, 25.1705, 1.25, -40.25, 24.4205, 2.25, -39.5, 24.9205, 1.5, -39.5, 27.1705, -2, -40.75, 26.4205, 0, -42.25, 27.1705, -0.25, -40.75, 26.4205, 0, -39.5, 27.1705, -2, -41, 27.1705, -7, -41.5, 26.9205, -7.75, -43, 26.9205, -8, -44.75, 26.9205, -6.75, -45.25, 27.1705, -4.75, -44.1875, 27.6705, -5.3125, -42.0625, 27.6705, -6.4375, -45.25, 27.1705, -4.75, -48.5, 24.9205, -2, -45, 25.6705, 1.25, -42.25, 27.1705, -0.25, -39.5, 27.1705, -2, -41, 27.1705, -7, -42.0625, 27.6705, -6.4375, -44.1875, 27.6705, -5.3125, -45.875, 25.9205, 0.4375, -40.25, 27.9205, -4.5, -40.625, 27.9205, -5.75, -44.4999, 27.6705, -2.52007, -43.0149, 27.9205, -2.50908, -38.75, 27.4205, -5.5, -40, 27.4205, -6.75, -41, 27.1705, -7, -39.5, 27.1705, -2, -38.5, 27.1705, -4, -40.625, 27.9205, -5.75, -40.25, 27.9205, -4.5, -47.75, 23.9205, 2.5, -45.5, 24.4205, 2.5, -45, 25.6705, 1.25, -48.5, 24.9205, -2, -49, 24.4205, -1.75, -49, 23.9205, 1, -45.875, 25.9205, 0.4375, -45.25, 27.1705, -4.75, -48.5, 24.6705, -2.75, -48.5, 24.9205, -2, -48.25, 24.1705, -5.25, -47.25, 24.1705, -6.75, -47.75, 23.6705, -7, -48.5, 23.6705, -6.5, -48.75, 23.9205, -5.25, -49.5, 23.4205, -5.25, -49.5, 23.4205, -4, -49, 23.9205, -4, -48.75, 23.9205, -5.25, -48.75, 23.9205, -5.25, -48.5, 23.6705, -6.5, -49.5, 23.4205, -5.25, -41.75, 23.6705, -6.5, -42.75, 23.9205, -7, -43.5, 24.6705, -5, -42.75, 24.4205, -1.75, -41.25, 23.6705, 0, -40.75, 23.4205, 0, -40.75, 23.4205, -5, -41.75, 23.6705, -6.5, -43.5, 24.6705, -5, -99.5, 0.170498, 93, -99.5, 0.170498, 99.5, -92.75, 0.170498, 99.5, -99.5, 0.170498, 86.75, -99.5, 0.170498, 93, -92.75, 0.170498, 99.5, -99.5, 0.170498, 86.75, -92.75, 0.170498, 99.5, -85.75, 0.170498, 99.5, -99.5, 0.170498, 80.25, -44.25, 0.170498, -0.75, -99.5, 0.170498, 42, -99.5, 0.170498, 48.5, -51.25, 0.170498, 99.5, -44.25, 0.170498, 99.5, -99.5, 0.170498, 80.25, -85.75, 0.170498, 99.5, -79, 0.170498, 99.5, -99.5, 0.170498, 74, -44.25, 0.170498, -0.75, -99.5, 0.170498, 16.5, -99.5, 0.170498, 23, -99.5, 0.170498, 74, -79, 0.170498, 99.5, -72, 0.170498, 99.5, -99.5, 0.170498, 67.5, -44.25, 0.170498, -0.75, -99.5, 0.170498, 35.75, -99.5, 0.170498, 42, -99.5, 0.170498, 67.5, -72, 0.170498, 99.5, -65.25, 0.170498, 99.5, -99.5, 0.170498, 61.25, -44.25, 0.170498, -0.75, -99.5, 0.170498, 23, -99.5, 0.170498, 29.25, -46, 0.170498, -1.5, -46, 0.170498, -2.25, -99.5, 0.170498, -2.25, -99.5, 0.170498, 4, -99.5, 0.170498, 48.5, -99.5, 0.170498, 54.75, -58.25, 0.170498, 99.5, -51.25, 0.170498, 99.5, -45.25, 0.170498, -0.75, -46, 0.170498, -1.5, -99.5, 0.170498, 4, -99.5, 0.170498, 10.25, -44.25, 0.170498, -0.75, -99.5, 0.170498, 29.25, -99.5, 0.170498, 35.75, -99.5, 0.170498, 61.25, -65.25, 0.170498, 99.5, -58.25, 0.170498, 99.5, -99.5, 0.170498, 54.75, -44.25, 0.170498, -0.75, -45.25, 0.170498, -0.75, -99.5, 0.170498, 10.25, -99.5, 0.170498, 16.5 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 7, 6, 8 ), PoolIntArray( 8, 6, 9 ), PoolIntArray( 12, 11, 10 ), PoolIntArray( 14, 13, 15 ), PoolIntArray( 15, 13, 16 ), PoolIntArray( 18, 17, 19 ), PoolIntArray( 19, 17, 20 ), PoolIntArray( 23, 22, 21 ), PoolIntArray( 26, 25, 24 ), PoolIntArray( 29, 28, 27 ), PoolIntArray( 32, 31, 33 ), PoolIntArray( 33, 31, 30 ), PoolIntArray( 36, 35, 34 ), PoolIntArray( 39, 38, 37 ), PoolIntArray( 41, 40, 42 ), PoolIntArray( 42, 40, 43 ), PoolIntArray( 46, 45, 44 ), PoolIntArray( 49, 48, 47 ), PoolIntArray( 50, 52, 51 ), PoolIntArray( 54, 53, 55 ), PoolIntArray( 55, 53, 56 ), PoolIntArray( 59, 58, 57 ), PoolIntArray( 62, 61, 60 ), PoolIntArray( 64, 63, 65 ), PoolIntArray( 65, 63, 66 ), PoolIntArray( 68, 67, 69 ), PoolIntArray( 69, 67, 70 ), PoolIntArray( 70, 67, 71 ), PoolIntArray( 71, 67, 72 ), PoolIntArray( 75, 74, 73 ), PoolIntArray( 78, 77, 76 ), PoolIntArray( 81, 80, 79 ), PoolIntArray( 84, 83, 82 ), PoolIntArray( 87, 86, 85 ), PoolIntArray( 90, 89, 88 ), PoolIntArray( 93, 92, 91 ), PoolIntArray( 96, 95, 94 ), PoolIntArray( 97, 100, 98 ), PoolIntArray( 98, 100, 99 ), PoolIntArray( 103, 102, 101 ), PoolIntArray( 106, 105, 104 ), PoolIntArray( 109, 108, 107 ), PoolIntArray( 110, 113, 111 ), PoolIntArray( 111, 113, 112 ), PoolIntArray( 115, 114, 116 ), PoolIntArray( 116, 114, 117 ), PoolIntArray( 119, 118, 120 ), PoolIntArray( 120, 118, 121 ), PoolIntArray( 121, 118, 122 ), PoolIntArray( 124, 123, 125 ), PoolIntArray( 125, 123, 126 ), PoolIntArray( 129, 128, 127 ), PoolIntArray( 132, 131, 130 ), PoolIntArray( 134, 133, 135 ), PoolIntArray( 135, 133, 136 ), PoolIntArray( 147, 143, 142 ), PoolIntArray( 143, 149, 137 ), PoolIntArray( 137, 149, 138 ), PoolIntArray( 138, 148, 139 ), PoolIntArray( 139, 148, 144 ), PoolIntArray( 144, 150, 145 ), PoolIntArray( 145, 146, 140 ), PoolIntArray( 146, 150, 141 ), PoolIntArray( 141, 150, 147 ), PoolIntArray( 147, 149, 143 ), PoolIntArray( 149, 148, 138 ), PoolIntArray( 148, 150, 144 ), PoolIntArray( 150, 146, 145 ), PoolIntArray( 150, 149, 147 ), PoolIntArray( 149, 150, 148 ), PoolIntArray( 153, 152, 151 ), PoolIntArray( 154, 157, 155 ), PoolIntArray( 155, 157, 156 ), PoolIntArray( 159, 161, 160 ), PoolIntArray( 160, 161, 158 ), PoolIntArray( 162, 165, 163 ), PoolIntArray( 163, 165, 164 ), PoolIntArray( 166, 169, 167 ), PoolIntArray( 167, 169, 168 ), PoolIntArray( 172, 171, 170 ), PoolIntArray( 174, 173, 175 ), PoolIntArray( 175, 173, 176 ), PoolIntArray( 178, 177, 179 ), PoolIntArray( 179, 177, 180 ), PoolIntArray( 182, 181, 183 ), PoolIntArray( 183, 181, 184 ), PoolIntArray( 184, 181, 185 ), PoolIntArray( 187, 186, 188 ), PoolIntArray( 188, 186, 190 ), PoolIntArray( 188, 190, 189 ), PoolIntArray( 193, 192, 191 ), PoolIntArray( 195, 194, 196 ), PoolIntArray( 196, 194, 197 ), PoolIntArray( 200, 199, 198 ), PoolIntArray( 203, 202, 201 ), PoolIntArray( 207, 206, 210 ), PoolIntArray( 210, 206, 211 ), PoolIntArray( 211, 206, 205 ), PoolIntArray( 211, 205, 204 ), PoolIntArray( 211, 204, 209 ), PoolIntArray( 211, 209, 208 ), PoolIntArray( 214, 213, 212 ), PoolIntArray( 217, 216, 215 ), PoolIntArray( 220, 219, 218 ), PoolIntArray( 222, 221, 223 ), PoolIntArray( 223, 221, 224 ), PoolIntArray( 227, 226, 225 ), PoolIntArray( 229, 228, 230 ), PoolIntArray( 230, 228, 231 ), PoolIntArray( 233, 232, 234 ), PoolIntArray( 234, 232, 235 ), PoolIntArray( 237, 236, 238 ), PoolIntArray( 238, 236, 239 ), PoolIntArray( 242, 241, 240 ), PoolIntArray( 244, 243, 245 ), PoolIntArray( 245, 243, 246 ), PoolIntArray( 247, 249, 248 ), PoolIntArray( 252, 251, 250 ), PoolIntArray( 254, 253, 255 ), PoolIntArray( 255, 253, 256 ), PoolIntArray( 259, 258, 257 ), PoolIntArray( 261, 260, 262 ), PoolIntArray( 262, 260, 263 ), PoolIntArray( 266, 265, 264 ), PoolIntArray( 268, 267, 269 ), PoolIntArray( 269, 267, 270 ), PoolIntArray( 272, 271, 273 ), PoolIntArray( 273, 271, 274 ), PoolIntArray( 276, 275, 277 ), PoolIntArray( 277, 275, 278 ), PoolIntArray( 281, 280, 279 ), PoolIntArray( 283, 282, 284 ), PoolIntArray( 284, 282, 285 ), PoolIntArray( 287, 286, 288 ), PoolIntArray( 288, 286, 289 ), PoolIntArray( 289, 286, 291 ), PoolIntArray( 289, 291, 290 ), PoolIntArray( 294, 293, 292 ), PoolIntArray( 296, 295, 297 ), PoolIntArray( 297, 295, 298 ), PoolIntArray( 301, 300, 299 ), PoolIntArray( 304, 303, 302 ), PoolIntArray( 308, 307, 305 ), PoolIntArray( 305, 307, 306 ), PoolIntArray( 311, 310, 309 ), PoolIntArray( 313, 312, 314 ), PoolIntArray( 314, 312, 316 ), PoolIntArray( 314, 316, 315 ), PoolIntArray( 317, 319, 318 ), PoolIntArray( 320, 326, 321 ), PoolIntArray( 321, 326, 322 ), PoolIntArray( 322, 326, 323 ), PoolIntArray( 323, 326, 325 ), PoolIntArray( 323, 325, 324 ), PoolIntArray( 337, 333, 332 ), PoolIntArray( 333, 339, 334 ), PoolIntArray( 334, 338, 327 ), PoolIntArray( 327, 338, 328 ), PoolIntArray( 328, 338, 335 ), PoolIntArray( 335, 330, 329 ), PoolIntArray( 330, 339, 331 ), PoolIntArray( 331, 339, 336 ), PoolIntArray( 336, 333, 337 ), PoolIntArray( 339, 338, 334 ), PoolIntArray( 333, 336, 339 ), PoolIntArray( 338, 330, 335 ), PoolIntArray( 330, 338, 339 ), PoolIntArray( 342, 341, 345 ), PoolIntArray( 345, 341, 346 ), PoolIntArray( 346, 341, 340 ), PoolIntArray( 346, 340, 344 ), PoolIntArray( 346, 344, 343 ), PoolIntArray( 349, 348, 353 ), PoolIntArray( 353, 348, 347 ), PoolIntArray( 353, 347, 352 ), PoolIntArray( 353, 352, 351 ), PoolIntArray( 353, 351, 350 ), PoolIntArray( 356, 355, 354 ), PoolIntArray( 359, 358, 360 ), PoolIntArray( 360, 358, 357 ), PoolIntArray( 360, 357, 361 ), PoolIntArray( 363, 362, 364 ), PoolIntArray( 364, 362, 365 ), PoolIntArray( 368, 367, 366 ), PoolIntArray( 371, 370, 369 ), PoolIntArray( 373, 372, 374 ), PoolIntArray( 374, 372, 375 ), PoolIntArray( 375, 372, 377 ), PoolIntArray( 375, 377, 376 ), PoolIntArray( 380, 379, 378 ), PoolIntArray( 383, 382, 381 ), PoolIntArray( 385, 384, 386 ), PoolIntArray( 386, 384, 387 ), PoolIntArray( 389, 388, 390 ), PoolIntArray( 390, 388, 391 ), PoolIntArray( 391, 388, 392 ), PoolIntArray( 394, 393, 395 ), PoolIntArray( 395, 393, 396 ), PoolIntArray( 399, 398, 397 ), PoolIntArray( 400, 403, 401 ), PoolIntArray( 401, 403, 402 ), PoolIntArray( 406, 405, 404 ), PoolIntArray( 407, 410, 408 ), PoolIntArray( 408, 410, 409 ), PoolIntArray( 413, 412, 411 ), PoolIntArray( 415, 414, 416 ), PoolIntArray( 416, 414, 417 ), PoolIntArray( 419, 418, 420 ), PoolIntArray( 420, 418, 421 ), PoolIntArray( 423, 422, 424 ), PoolIntArray( 424, 422, 425 ), PoolIntArray( 428, 427, 426 ), PoolIntArray( 429, 432, 430 ), PoolIntArray( 430, 432, 431 ), PoolIntArray( 434, 433, 435 ), PoolIntArray( 435, 433, 436 ) ]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.12549, 0.396078, 0.129412, 1 )
metallic = 0.22
metallic_specular = 0.0

[sub_resource type="BoxShape" id=6]

[sub_resource type="CylinderMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.776471, 0.321569, 0.12549, 1 )

[sub_resource type="CapsuleMesh" id=9]

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.176471, 0.721569, 0.180392, 1 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.101961, 0.627451, 0.105882, 1 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.172549, 0.611765, 0.176471, 1 )

[sub_resource type="CylinderShape" id=13]

[node name="Map" type="Spatial"]

[node name="Rig" type="Spatial" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 22.7514 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="Rig"]
transform = Transform( 0.707107, 0.454519, -0.541675, 0, 0.766044, 0.642788, 0.707107, -0.454519, 0.541675, 0, 21.9677, 10.0336 )
current = true

[node name="GUI" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -97.0
margin_right = 1025.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="GUI"]
modulate = Color( 0.521569, 1, 0.576471, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
size_flags_vertical = 3

[node name="Buttons" type="Control" parent="GUI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="BuildRunewoodGatherersButton" type="Button" parent="GUI/Buttons"]
margin_left = 23.0
margin_top = 22.0
margin_right = 168.0
margin_bottom = 77.0
text = "Runewood Gatherers"

[node name="NoBuildZone" type="Area2D" parent="GUI"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GUI/NoBuildZone"]
position = Vector2( 513.5, 51 )
shape = SubResource( 3 )

[node name="MouseCollision" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseCollision"]
shape = SubResource( 4 )

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="." groups=["NavMesh"]]
navmesh = SubResource( 5 )

[node name="Ground" type="StaticBody" parent="NavigationMeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.150517, 0 )

[node name="MeshInstance" type="MeshInstance" parent="NavigationMeshInstance/Ground"]
transform = Transform( 100, 0, 0, 0, 0.596411, 0, 0, 0, 100, 0, -0.582575, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="NavigationMeshInstance/Ground"]
transform = Transform( 100, 0, 0, 0, 0.596411, 0, 0, 0, 100, 0, -0.629508, 0 )
shape = SubResource( 6 )

[node name="Tree" type="StaticBody" parent="NavigationMeshInstance" groups=["Runetree"]]
transform = Transform( 1, 0, 0, 0, 13.2058, 0, 0, 0, 1, 8.86629, 8.53063, -38.0316 )

[node name="Trunk" type="MeshInstance" parent="NavigationMeshInstance/Tree"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00240707, 0.260146, -0.0135002 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="MeshInstance2" type="MeshInstance" parent="NavigationMeshInstance/Tree"]
transform = Transform( 5.82324, 0, 0, 0, 0.318024, 0, 0, 0, 4.46605, -0.705424, 0.877227, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="MeshInstance3" type="MeshInstance" parent="NavigationMeshInstance/Tree"]
transform = Transform( 4.02686, 0, 0, 0, 0.259339, -0.195743, 0, 2.4308, 3.64193, 3.44345, 1.02271, 0.0570736 )
mesh = SubResource( 9 )
material/0 = SubResource( 11 )

[node name="MeshInstance4" type="MeshInstance" parent="NavigationMeshInstance/Tree"]
transform = Transform( 1.69386, -2.20529, -3.30406, 0, 0.259339, -0.195743, 5.06249, 1.41691, 2.12287, -0.0946484, 1.02271, -0.338146 )
mesh = SubResource( 9 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="NavigationMeshInstance/Tree"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00240707, 0.260146, -0.0135002 )
shape = SubResource( 13 )

[node name="Tree2" type="StaticBody" parent="NavigationMeshInstance" groups=["Runetree"]]
transform = Transform( 1, 0, 0, 0, 13.2058, 0, 0, 0, 1, -44.4365, 8.53063, -2.33099 )

[node name="Trunk" type="MeshInstance" parent="NavigationMeshInstance/Tree2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00240707, 0.260146, -0.0135002 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="MeshInstance2" type="MeshInstance" parent="NavigationMeshInstance/Tree2"]
transform = Transform( 5.82324, 0, 0, 0, 0.318024, 0, 0, 0, 4.46605, -0.705424, 0.877227, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="MeshInstance3" type="MeshInstance" parent="NavigationMeshInstance/Tree2"]
transform = Transform( 4.02686, 0, 0, 0, 0.259339, -0.195743, 0, 2.4308, 3.64193, 3.44345, 1.02271, 0.0570736 )
mesh = SubResource( 9 )
material/0 = SubResource( 11 )

[node name="MeshInstance4" type="MeshInstance" parent="NavigationMeshInstance/Tree2"]
transform = Transform( 1.69386, -2.20529, -3.30406, 0, 0.259339, -0.195743, 5.06249, 1.41691, 2.12287, -0.0946484, 1.02271, -0.338146 )
mesh = SubResource( 9 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="NavigationMeshInstance/Tree2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00240707, 0.260146, -0.0135002 )
shape = SubResource( 13 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23.9101, 0, 0 )
light_energy = 0.0

[connection signal="button_down" from="GUI/Buttons/BuildRunewoodGatherersButton" to="GUI" method="_on_BuildRunewoodGatherersButton_button_down"]
[connection signal="area_entered" from="GUI/NoBuildZone" to="GUI" method="_on_NoBuildZone_area_entered"]
[connection signal="area_exited" from="GUI/NoBuildZone" to="GUI" method="_on_NoBuildZone_area_exited"]
